[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://GameAssets/bullets_of_color_title_screen.png" type="Texture" id=2]
[ext_resource path="res://GameAssets/Music/bit-crushed_colors.wav" type="AudioStream" id=3]
[ext_resource path="res://GameAssets/Fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GameAssets/Themes/ButtonTheme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=10]
size = 15
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.576471, 0.0392157, 0.0392157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.576471, 0.0392157, 0.0392157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.419608, 0.392157, 0.392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.141176, 0.141176, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 13
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainScreen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 757.0
margin_top = 377.0
margin_right = 1161.0
margin_bottom = 748.0
theme = ExtResource( 6 )
custom_constants/separation = 30

[node name="LevelSelect" type="Button" parent="MainScreen/VBoxContainer"]
margin_right = 404.0
margin_bottom = 103.0
size_flags_vertical = 3
text = "Play"

[node name="Settings" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 133.0
margin_right = 404.0
margin_bottom = 237.0
size_flags_vertical = 3
text = "Settings"

[node name="Quit" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 267.0
margin_right = 404.0
margin_bottom = 371.0
size_flags_vertical = 3
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="MainScreen"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1880.0
margin_bottom = 1040.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="HighScoreLabel" type="Label" parent="MainScreen"]
margin_left = 925.0
margin_top = 475.0
margin_right = 1161.0
margin_bottom = 493.0
theme = SubResource( 11 )
text = "High Score: N/A"

[node name="SettingScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="KbModeLabel" type="Label" parent="SettingScreen"]
anchor_left = 0.840625
anchor_top = 0.287037
anchor_right = 0.986979
anchor_bottom = 0.378704
theme = SubResource( 7 )
text = "Keyboard Mode
"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ControlsLabel" type="Label" parent="SettingScreen"]
anchor_left = 0.764063
anchor_top = 0.19537
anchor_right = 0.907812
anchor_bottom = 0.287037
theme = SubResource( 7 )
text = "Controls
"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackButton" type="Button" parent="SettingScreen"]
anchor_left = 0.0265625
anchor_top = 0.90463
anchor_right = 0.130208
anchor_bottom = 0.978704
margin_right = 1.52588e-05
theme = SubResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="SettingScreen"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.227451, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect2" type="ColorRect" parent="SettingScreen"]
show_behind_parent = true
anchor_top = 0.886111
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.10352e-05
mouse_filter = 2
color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect3" type="ColorRect" parent="SettingScreen"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 0.0888889
mouse_filter = 2
color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect4" type="ColorRect" parent="SettingScreen"]
show_behind_parent = true
anchor_left = 0.615104
anchor_top = 0.184259
anchor_right = 1.0
anchor_bottom = 0.256481
color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioLabel" type="Label" parent="SettingScreen"]
anchor_left = 0.148958
anchor_top = 0.19537
anchor_right = 0.292708
anchor_bottom = 0.287037
theme = SubResource( 7 )
text = "Audio
"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect5" type="ColorRect" parent="SettingScreen"]
show_behind_parent = true
anchor_top = 0.184259
anchor_right = 0.388021
anchor_bottom = 0.256481
color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="KbModeCheckBox" type="CheckBox" parent="SettingScreen"]
anchor_left = 0.906771
anchor_top = 0.367593
anchor_right = 0.919271
anchor_bottom = 0.389815
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MouseModeLabel" type="Label" parent="SettingScreen"]
anchor_left = 0.644792
anchor_top = 0.287037
anchor_right = 0.791146
anchor_bottom = 0.378704
theme = SubResource( 7 )
text = "Mouse Mode
"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BgAudioLabel" type="Label" parent="SettingScreen"]
anchor_left = 0.0380208
anchor_top = 0.287037
anchor_right = 0.184375
anchor_bottom = 0.425926
margin_bottom = -3.05176e-05
theme = SubResource( 7 )
text = "Background
"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MouseModeCheckBox" type="CheckBox" parent="SettingScreen"]
anchor_left = 0.701563
anchor_top = 0.367593
anchor_right = 0.765625
anchor_bottom = 0.390741
theme = SubResource( 9 )
text = "(Recommended)"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BgSoundSlider" type="HSlider" parent="SettingScreen"]
anchor_left = 0.0208333
anchor_top = 0.367593
anchor_right = 0.173958
anchor_bottom = 0.389815
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EffectsAudioLabel" type="Label" parent="SettingScreen"]
anchor_left = 0.251042
anchor_top = 0.287037
anchor_right = 0.397396
anchor_bottom = 0.425926
margin_left = -3.05176e-05
margin_bottom = -3.05176e-05
theme = SubResource( 7 )
text = "Effects
"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EffectSoundSlider" type="HSlider" parent="SettingScreen"]
anchor_left = 0.217187
anchor_top = 0.367593
anchor_right = 0.370313
anchor_bottom = 0.389815
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true
bus = "Background"

[connection signal="mouse_entered" from="MainScreen/VBoxContainer/LevelSelect" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainScreen/VBoxContainer/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="mouse_entered" from="MainScreen/VBoxContainer/Settings" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainScreen/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="MainScreen/VBoxContainer/Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainScreen/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="SettingScreen/BackButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="SettingScreen/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="SettingScreen/KbModeCheckBox" to="." method="_on_KbModeCheckBox_toggled"]
[connection signal="toggled" from="SettingScreen/MouseModeCheckBox" to="." method="_on_MouseModeCheckBox_toggled"]
[connection signal="value_changed" from="SettingScreen/BgSoundSlider" to="." method="_on_BgSoundSlider_value_changed"]
[connection signal="value_changed" from="SettingScreen/EffectSoundSlider" to="." method="_on_EffectSoundSlider_value_changed"]
